--- a/example/do.yaml
+++ b/example/do.yaml
@@ -1,26 +1,28 @@
-root: true
-base_domain: foo.com
-mongo:
-  foo: 3
-  foo_bar: "{{ mongo.foo }}"
-file_path: /foo/bar.txt
-file_name: "{{ file_path | basename }}"
-do_not_fail: "{{ do_not_fail }}"
-system_deployments:
-  - giweb
-  - pgadmin4
-  - upcoming
-  - disabled
-
-target#local:
-  machine: centos8
-  debug: true
-  scheme: 'http'
-  domain: hikeorama.centos8.box
-
-target#live:
-  machine: jorrodev-1
-  scheme: 'https'
-  debug: false
-  domain: hikeorama.com
-  subdomain: "www.{{ base_domain }}"
+foo_0: "foo_0"
+foo_1: "{{ foo_0 }}_1"
+foo_2: "{{ foo_1 }}_2"
+foo_3: "{{ foo_2 }}_3"
+foo_4: "{{ foo_3 }}_4"
+vars:
+  postgresql_db_password: django_metal
+  postgresql_db_user: django_metal
+  postgresql_db_name: django_metal
+target#dev:
+  vars: 
+    allowed_hosts: []
+    foo: 3
+    foo_bar: "{{ vars.foo }}"
+target#test:
+  vars:
+    nginx: true
+    service: true
+    # domain: django-metal.{{ vars['base_domain'] }}
+    # domain: django-metal.{{ vars.base_domain }}
+    domain: django-metal.{{ vars.base_domain }}
+    # allowed_hosts:
+    #   - "{{ vars.domain }}"
+    #   - "www.{{ vars.domain }}"
+    # nginx_server_name: "{{ vars.allowed_hosts | join(' ') }}"
+    # nginx_certs: "~/.domains/{{ vars.base_domain }}"
+    ssl_certificate: "{{ certs_dir }}/cert.pem"
+    ssl_certificate_key: "{{ certs_dir }}/key.pem"
